# dpkg-query-json

./: Cargo.toml  README.md
src/: lib.rs  main.rs
