[package]
name = "dpkg-query-json"
version = "0.1.1"
authors = ["xxx"]
edition = "2018"
description = "A crate for parsing \"dpkg-query\" in json. Debian/Ubuntu."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#Inflector = "0.11.4"
serde_json = "1.0.64"